--- a/src/style/main.css
+++ b/src/style/main.css
@@ -109,7 +109,7 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-wrap: wrap;
 }
 .gallery-section h2 {
@@ -146,8 +146,26 @@
   max-height: 100%;
 }
 
-.Selected-image-container {
-  max-width: 45%;
+.selected-image-container {
+  width: 45%;
+}
+.selected-image-container figure {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0;
+  height: 410px;
+  width: 100%;
+}
+.selected-image-container figure img {
+  width: 100%;
+  min-height: 80%;
+  max-height: 90%;
+  overflow: hidden;
+}
+.selected-image-container figure figcaption {
+  margin: 5px;
 }
 
 body {
